--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ state changing styling
 */
 html {
   box-sizing: border-box;
+  background-color: #f9f9f9;
 }
 *,
 *:before,
@@ -283,6 +284,7 @@ article {
   border-radius: 8px;
   margin: 30px;
   border-width: 2px;
+  background-color: #f9f9f9;
 }
 
 h1 {
@@ -292,6 +294,7 @@ h1 {
   padding-bottom: 13px;
   text-align: center;
   margin-left: -10px;
-  margin-right: -10px;  
+  margin-right: -10px;
+  padding-top: 10px;
 }
 
